# PythonProject

./: .buildinfo  .gitignore  Makefile_Windows  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yaml  ci.yml  deploy_docs.yml
docs/: index.rst.txt
docs/_build/html/: genindex.html
docs/source/: conf.py
src/: mon_code.py  mon_module.py
tests/: test_mon_code  test_mon_module.py
